Beggining 'Why?' section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,17 @@ class CalculatorTest {
       <h3>Por quê?</h3>
     </hgroup>
     <article>
+      <ul>
+        <li>
+          Software correto é o <b>mínimo</b> aceitável
+          <ul>
+            <li class="build"><span>mas...</span> <span>~stuff~ happens</span></li>
+          </ul>
+        </li>
 
+        <li>Garantir a corretude dos componentes, individualmente</li>
+        <li>Exercitar a capacidade de análise</li>
+      </ul>
     </article>
   </slide>
 
