--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@ URL: https://code.google.com/p/io-2012-slides
     <aside class="gdbar"><img src="images/meritt_icon_128.png"></aside>
     <hgroup class="auto-fadein">
       <h2>Testes de unidade</h2>
+      <h3>
+        O que são? Como escrevê-los?
+        <span class="removed">De que se alimentam?</span>
+      </h3>
     </hgroup>
   </slide>
 
@@ -325,51 +329,51 @@ class CalculatorTest <b>extends PHPUnit_Framework_TestCase</b> {
     </article>
   </slide>
 
-  <slide class="segue dark nobackground">
-    <aside class="gdbar"><img src="images/meritt_icon_128.png"></aside>
-    <hgroup class="auto-fadein">
-      <h2>Automação de testes</h2>
-    </hgroup>
-  </slide>
-
-  <slide>
-    <hgroup>
-      <h2>Automação de testes</h2>
-    </hgroup>
-    <article>
-
-    </article>
-  </slide>
-
-  <slide class="segue dark nobackground">
-    <aside class="gdbar"><img src="images/meritt_icon_128.png"></aside>
-    <hgroup class="auto-fadein">
-      <h2>Test-driven development (TDD)</h2>
-    </hgroup>
-  </slide>
-
-  <slide>
-    <hgroup>
-      <h2>Test-driven development (TDD)</h2>
-    </hgroup>
-    <article>
-
-    </article>
-  </slide>
-
-  <slide class="segue dark nobackground">
-    <aside class="gdbar"><img src="images/meritt_icon_128.png"></aside>
-    <hgroup class="auto-fadein">
-      <h2>Cobertura de testes</h2>
-    </hgroup>
-  </slide>
-
   <slide>
     <hgroup>
       <h2>Cobertura de testes</h2>
     </hgroup>
     <article>
       - mocks, stubs, etc.
+    </article>
+  </slide>
+
+  <slide class="segue dark nobackground">
+    <aside class="gdbar"><img src="images/meritt_icon_128.png"></aside>
+    <hgroup class="auto-fadein">
+      <h2>Test-driven development (TDD)</h2>
+    </hgroup>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Test-driven development (TDD)</h2>
+    </hgroup>
+    <article>
+
+    </article>
+  </slide>
+
+  <slide class="segue dark nobackground">
+    <aside class="gdbar"><img src="images/meritt_icon_128.png"></aside>
+    <hgroup class="auto-fadein">
+      <h2>Cobertura de testes</h2>
+    </hgroup>
+  </slide>
+
+  <slide class="segue dark nobackground">
+    <aside class="gdbar"><img src="images/meritt_icon_128.png"></aside>
+    <hgroup class="auto-fadein">
+      <h2>Automação de testes</h2>
+    </hgroup>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Automação de testes</h2>
+    </hgroup>
+    <article>
+
     </article>
   </slide>
 
