Updating visual style according to Meritt brand application rules

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ URL: https://code.google.com/p/io-2012-slides
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
     </hgroup>
-    <img src="images/meritt_logo_medium.png" style="position: absolute; right: 50px; top: 50px;">
+    <img src="images/meritt_logo_medium.png" style="position: absolute; right: 60px; bottom: 90px; width: 290px">
   </slide>
 
   <slide class="nobackground">
@@ -983,15 +983,18 @@ OK (1 test, 1 assertion)</pre>
   </slide>
 
   <slide class="thank-you-slide segue nobackground">
-    <aside class="gdbar right"><img src="images/meritt_icon_128.png"></aside>
+    <!--<aside class="gdbar right"><img src="images/meritt_icon_128.png"></aside>-->
+    <aside></aside>
     <article class="flexbox vleft auto-fadein">
+      <img src="images/tiago_cartoon.png" style="width: 100px; margin-top: -70px;">
       <h2>Muito obrigado!</h2>
+      <img src="images/meritt_logo_white.png" style="bottom: 80px; position: absolute; right: 95px; width: 225px;">
     </article>
     <p class="auto-fadein">
       <span>email</span><a href="mailto:tfurtado@gmail.com">tfurtado@gmail.com</a><br>
       <span>twitter</span><a href="http://twitter.com/@tiagobronca">@tiagobronca</a><br>
       <span>github</span><a href="http://github.com/tfurtado">github.com/tfurtado</a><br>
-      <a href="http://meritt.com.br">meritt.com.br</a>
+      <span>visite</span><a href="http://meritt.com.br">meritt.com.br</a>
     </p>
   </slide>
 
